# mechanicsdsl-notebooks

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
binder/: environment.yml  postBuild
docs/: index.md  notation.md
notebooks/: 01_double_pendulum.ipynb  02_coupled_oscillators.ipynb  03_constraints.ipynb  04_central_forces.ipynb  05_hamiltonian.ipynb
scripts/: check_notebooks.py  generate_index.py
src/mechanicsdsl_notebooks/: __init__.py  _cli.py
tests/: conftest.py  test_notebooks_run.py
