[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanicsdsl-notebooks"
version = "0.1.0"
description = "Curated Jupyter notebooks for MechanicsDSL — classical mechanics, quantum, electromagnetism, relativity, statistical mechanics"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Noah Parsons", email = "nomapa223@gmail.com" }
]
keywords = [
  "jupyter", "notebooks", "physics", "computational mechanics",
  "MechanicsDSL", "education", "scientific computing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Education",
]
requires-python = ">=3.9"
dependencies = [
  "mechanicsdsl-core[jupyter]",
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbconvert", "nbformat", "ruff"]

[project.scripts]
mechanicsdsl-notebooks = "mechanicsdsl_notebooks.cli:main"

[project.urls]
Homepage = "https://github.com/MechanicsDSL/mechanicsdsl-notebooks"
Binder = "https://mybinder.org/v2/gh/MechanicsDSL/mechanicsdsl-notebooks/main"
DOI = "https://doi.org/10.5281/zenodo.17771040"

[tool.hatch.build.targets.wheel]
packages = ["src/mechanicsdsl_notebooks"]
artifacts = ["notebooks/*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
